test/org/midica/testfiles/failing/call-with-recursion.midica
INCLUDE inc/instruments.midica

FUNCTION test
	0 c /4
	CALL test
END
